	only if a new data file is opened; preserve them when switching data
	sets.
	* configure.ac, NEWS, doc/cvlview.texi: Bump version to 0.2.0.
	* src/channel_selector.h, src/channel_selector.cpp: Preserve channel
	setting when switching between data sets in the same data file.
	* gnulib/m4/lseek.m4, gnulib/m4/fseeko.m4, gnulib/m4/ftello.m4, 
	gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4, gnulib/fseeko.c,
	gnulib/lseek.c, gnulib/ftello.c, gnulib/Makefile.am: Add gnulib fseeko
	and ftello modules for W32 portability.

2007-10-11  Martin Lambers <marlam@marlam.de>

	* src/pixel_info.cpp, src/channel_info.cpp: Print numbers with higher
	precision.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-10-03  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvlview.texi, doc/cvlview.1, NEWS: Update for
	version 0.1.2.

2007-09-18  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Do not fail on images where a channel contains 
	only a single value, and therefore min == max. Bug reported by Maik
	Keller <keller@fb12.uni-siegen.de>.
	* src/interpolation_selector.cpp: Disable interpolation by default,
	since this is a data viewer and not an image viewer. Bug reported by
	Maik Keller <keller@fb12.uni-siegen.de>.

2007-09-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Remove unused --debug option for configure script.
	* configure.ac, doc/cvlview.texi, doc/cvlview.1: Bump version numbers
	and dates for 0.1.1.
	* NEWS: Update for 0.1.1.
	* doc/Makefile.am: Distribute man page.

2007-09-05  Martin Lambers <marlam@marlam.de>

	* Force initializeGL() in constructor. This prevents potential
	segfaults when other parts of the application use our GL context for
	CVL calls.

2007-09-04  Martin Lambers <marlam@marlam.de>

	* Update information in the AboutBox.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Initial public release.